<resources>
    <string name="app_name">Agromonitor</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">E-mail inválido ou incorreto</string>
    <string name="error_invalid_password">Senha muito pequena</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="error_user_not_found">Login/Senha não conferem</string>
    <string name="error_connection">Problema de conexão com o servidor</string>
    <string name="permission_rationale">"Você não tem as permissões necessárias para o acesso"</string>
    <string name="develovped_by">Mazer@2018</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_spreadsheet">Planilha</string>
    <string name="title_reports">Relatórios</string>
    <string name="title_settings">Configurações</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello b223lank fragment</string>
    <string name="hello_blank_fragment3">Hello blan3333k fragment</string>

    <string name="empty_projects">Você ainda não tem planilha</string>
    <string name="start_new_project">Nova Planilha</string>
    <string name="choose_an_culture">Escolha uma cultura:</string>
    <string name="choose_an_turn">Escolha um turno:</string>
    <string name="name_project_label">Nome dd Planilha</string>
    <string name="name_farm_label">Nome da Fazenda</string>
    <string name="name_talhao_label">Talhao</string>
    <string name="name_frente_colheita_label">Frente de Colheita</string>
    <string name="name_machine_id_label">Nº ID Maquina</string>
    <string name="name_operators_name_label">Nome do Operador</string>
    <string name="name_measurer_name_label">Avaliador</string>
    <string name="products_label">Produtos:</string>
    <string name="culture_label">Cultura:</string>
    <string name="error_no_products">Você deve ter ao menos 1 produto adicionado</string>
    <string name="project_save_success">Planilha salva com sucesso</string>
    <string name="project_save_error">Erro ao salvar o planilha</string>

    <string name="culture_cana">Cana-de-açucar</string>
    <string name="culture_soja">Soja</string>
    <string name="culture_milho">Milho</string>
    <string name="culture_cafe">Café</string>
    <string name="culture_amendoim">Amendoim</string>
    <string name="culture_algodao">Algodão</string>
    <string name="perda_em_hectares">Sua perda foi de %1$s reais/ha</string>

    <string name="turno_diurno">Diurno</string>
    <string name="turno_noturno">Noturno</string>

    <string name="button_new_project">Salvar</string>

    <string name="title_onboard_no_project">Toque para começar seu primeiro projeto</string>

    <!-- Charts-->
    <string name="floating_chat_button">Adicionar Limites</string>


    <!-- New Reg Step 1! -->
    <string name="title_step1">Nova Planilha - Passo 1</string>
    <string name="label_project_name">1. Informe o Nome da Planilha</string>
    <string name="label_subtopic_project_name">*Este nome indentificará sua planilha</string>
    <string name="label_culture">2. Informe a Cultura</string>
    <string name="label_turn">3. Informe o Turno</string>
    <string name="label_subtopic_turn">*Para Cana-de-açucar o turno é automaticamente Diurno</string>
    <string name="label_when_ready_step1">Quando estiver pronto, toque para avançar</string>
    <string name="btn_next_step1">Próximo</string>

    <!-- New Reg Step 2! -->
    <string name="title_step2">Nova Planilha - Passo 2</string>
    <string name="label_farm_name">4. Nome da Fazenda</string>
    <string name="label_subtopic_farm_name">* Você pode deixar em branco caso ache necessário</string>
    <string name="label_when_ready_step2">Vá para o próximo passo, ou retorno para o anterior</string>
    <string name="label_operator_name">5. Nome do Operador</string>
    <string name="label_measurer_name">6. Avaliador</string>
    <string name="btn_next_step2">Próximo</string>
    <string name="btn_back_step1">Voltar</string>

    <!-- New Reg Step 3! -->
    <string name="title_step3">Nova Planilha - Passo 3</string>
    <string name="label_talhao_name">7. Talhão</string>
    <string name="label_id_machine_name">8. ID Máquina</string>
    <string name="label_subtopic_machine_name">* Número de identificação da máquina de colheita</string>
    <string name="label_frente_name">9. Frente de colheita</string>
    <string name="label_when_ready_step3">Vá para o último passo, ou retorno para o anterior</string>

    <!-- New Reg Step Variables! -->
    <string name="title_step_variables">Nova Planilha - Variáveis</string>
    <string name="label_when_ready_step_variables">Toque para salvar seu projeto, ou retorne para o passo anterior</string>
    <string name="btn_next_step_variables">Concluir</string>
    <string name="btn_back_step_variables">Voltar</string>
    <string name="label_subtopic_variable_name">* Cada variável representará uma coluna na planilha do projeto</string>
    <string name="label_subtopic_perdas_totais">* As perdas totais será uma variável contendo a somatória das perdas de cada variável</string>
    <string name="label_measure_unity">Unidade de Medida: </string>
    <string name="duplicated_variable">Já existe uma variável com este nome</string>

    <string name="dialog_select_variable">Selectione a variável</string>
    <string name="dialog_notes_title">Adicionar Observações</string>

    <string name="generate_excel">Gerar Planiha</string>
    <string name="generate_report">Gerar Relatório</string>
    <string name="cb_perdas_totais">Adicionar Perdas Totais</string>

</resources>
