<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_project_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:text="@string/choose_an_culture"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radiogroup_culture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_cana_de_acucar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/culture_cana" />

                <RadioButton
                    android:id="@+id/radio_soja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/culture_soja" />


            </RadioGroup>

            <TextView
                android:id="@+id/tv_turn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:text="@string/choose_an_turn"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radiogroup_turno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/turno_diurno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turno_diurno" />

                <RadioButton
                    android:id="@+id/turno_noturno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/turno_noturno" />


            </RadioGroup>


            <EditText
                android:id="@+id/name_farm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_farm_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_talhao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_talhao_label"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/frente_colheita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_frente_colheita_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/machine_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_machine_id_label"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/operators_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_operators_name_label"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/measurer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:hint="@string/name_measurer_name_label"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/neuton"
                android:text="@string/products_label"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_product_label"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <ImageView
                    android:id="@+id/btn_add_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Adicionar Produto"
                    app:srcCompat="@drawable/plus_circle" />


            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_products"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:layout_gravity="center|bottom"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_item_product" />


            <Button
                android:id="@+id/btnSaveNewProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/button_new_project" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>