<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.mazer.agromonitor.NewProjectActivityStep3">


    <TextView
        android:id="@+id/informe_talhao_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_talhao_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <EditText
        android:id="@+id/text_talhao_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informe_talhao_name_label" />

    <TextView
        android:id="@+id/informe_id_machine_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_id_machine_name"

        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_talhao_name" />


    <TextView
        android:id="@+id/subtopico_machine_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/label_subtopic_machine_name"

        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informe_id_machine_label"
        android:layout_marginLeft="8dp" />


    <EditText
        android:id="@+id/text_machine_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtopico_machine_name_label" />

    <TextView
        android:id="@+id/informe_frente_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_frente_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_machine_id" />


    <EditText
        android:id="@+id/text_frente_colheita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informe_frente_name_label" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape_accent" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_back_to_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp"
            android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/btn_back_step1"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_next_to_step4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/btn_next_step1"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />



    </RelativeLayout>


    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_alignTop="@+id/hint_text_step2"

        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:scaleX="-1"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/white_arrow"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/hint_text_step2"
        android:layout_width="154dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="2dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:maxEms="10"
        android:text="@string/label_when_ready_step3"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toStartOf="@+id/arrow_right"
        app:layout_constraintStart_toEndOf="@+id/arrow_left" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/white_arrow"
        android:layout_marginRight="8dp" />





</androidx.constraintlayout.widget.ConstraintLayout>
