<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.greenlab.agromonitor.CreateVariables">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:elevation="10dp"
        android:background="@color/colorAccent"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_finish_project"
            android:layout_toStartOf="@+id/btn_finish_project"
            android:orientation="horizontal">

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_margin="8dp"
                android:background="@drawable/circular_shape_accent" />

        </LinearLayout>

        <TextView
            android:id="@+id/btn_back_to_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="148dp"
            android:layout_marginRight="148dp"
            android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/btn_back_step1"
            android:textAllCaps="true"
            android:textColor="@color/secondary_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_finish_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="44dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/btn_next_step_variables"
            android:textAllCaps="true"
            android:textColor="@color/gold"
            android:textSize="14sp" />


    </RelativeLayout>


    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_alignTop="@+id/hint_text_step2"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:scaleX="-1"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/white_arrow" />

    <TextView
        android:id="@+id/hint_text_step2"
        android:layout_width="154dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="8dp"
        android:gravity="center"
        android:maxEms="10"
        android:text="@string/label_when_ready_step_variables"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toStartOf="@+id/arrow_right"
        app:layout_constraintStart_toEndOf="@+id/arrow_left" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="90dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/white_arrow" />

    <TextView
        android:id="@+id/subtopico_variables_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/name_project"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_subtopic_variable_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_variaveis" />

    <EditText
        android:id="@+id/text_variaveis"
        android:layout_width="277dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="variáveis"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_add_variable"
        android:layout_width="47dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/text_variaveis"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_products"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_gravity="center|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_item_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtopico_variables_label" />




</android.support.constraint.ConstraintLayout>
